--- a/simple_platformer/pubspec.yaml
+++ b/simple_platformer/pubspec.yaml
@@ -1,34 +1,27 @@
-name: simple_platformer
-description: The Simple Platformer game.
+name: flame_simple_platformer
+description: A 2d platformer made using Flame engine
 
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-
-version: 0.1.0
+publish_to: "none"
+version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.6 <4.0.0'
+  sdk: ">=2.17.1 <3.0.0"
 
 dependencies:
+  flame: 1.8.1
+  flame_tiled: 1.12.0
+  tiled: 0.10.1
+  flame_audio: 2.0.4
   flutter:
     sdk: flutter
-
-  flame: 1.0.0
-  flame_tiled: 1.0.0
-  # tiled: 0.10.1
-  # flame_audio: 2.0.4
-
-  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  flutter_lints: ^2.0.0
+  flutter_lints: 2.0.2
 
 flutter:
-
   uses-material-design: true
-
   assets:
     - assets/images/
     - assets/tiles/
